[gd_scene load_steps=39 format=3 uid="uid://d3mhx73q5oew6"]

[ext_resource type="StyleBox" uid="uid://x8u3seqyt5bn" path="res://ui/button_style.tres" id="1_smf4e"]
[ext_resource type="Script" path="res://ui/fita_browser.gd" id="1_xo0bf"]
[ext_resource type="StyleBox" uid="uid://cus6mnsir8ysj" path="res://ui/button_style_hover.tres" id="2_alp6a"]
[ext_resource type="Resource" uid="uid://dbhmc4l0cuxbi" path="res://data/fita_dades_balanc_de_costos.tres" id="2_ljtju"]
[ext_resource type="Resource" uid="uid://b41c5wu1e8a2f" path="res://data/fita_erp_todo1.tres" id="2_o2fxk"]
[ext_resource type="Resource" uid="uid://co46wgp3vapsx" path="res://data/fita_dades_ingesta_cicd.tres" id="3_3w7gs"]
[ext_resource type="Script" path="res://ui/carrousel_container.gd" id="3_cemh0"]
[ext_resource type="Theme" uid="uid://5c6ik58qnw2u" path="res://ui/fita_theme.tres" id="4_412c2"]
[ext_resource type="Resource" uid="uid://hnlptdgtr3ai" path="res://data/fita_dades_jardiner.tres" id="4_u64op"]
[ext_resource type="Resource" uid="uid://c5lw0d0haw7ul" path="res://data/fita_dades_pmkanbanize.tres" id="5_mer0w"]
[ext_resource type="Resource" uid="uid://r5q8lrng126w" path="res://data/fita_dades_transoceanics.tres" id="6_uocgh"]
[ext_resource type="Resource" uid="uid://bhnkadlavrxa6" path="res://data/fita_erp_todo2.tres" id="8_nyx60"]
[ext_resource type="Resource" uid="uid://bxba1ewkf33g0" path="res://data/fita_erp_todo3.tres" id="9_jrfb0"]
[ext_resource type="Resource" uid="uid://ujej7sqbdrpn" path="res://data/fita_erp_todo4.tres" id="10_j25no"]
[ext_resource type="Resource" uid="uid://cukn3piwopcn0" path="res://data/fita_erp_todo5.tres" id="11_n4nsb"]
[ext_resource type="Resource" uid="uid://dh3bsari7vpcq" path="res://data/fita_suport_authentik.tres" id="12_8x6ax"]
[ext_resource type="Resource" uid="uid://bvpx8sk2vclv3" path="res://data/fita_suport_nsx.tres" id="13_i7un3"]
[ext_resource type="Resource" uid="uid://cpng0bsxogfto" path="res://data/fita_suport_sm.tres" id="14_5lx4o"]
[ext_resource type="Resource" uid="uid://dwxqxhv4h6sva" path="res://data/fita_webapps_components.tres" id="15_4tew2"]
[ext_resource type="Resource" uid="uid://o4eu5ibb0g4s" path="res://data/fita_webapps_generation.tres" id="16_cry2x"]
[ext_resource type="Resource" uid="uid://c7fwdyiu6i7o3" path="res://data/fita_webapps_indexada.tres" id="17_rjdhl"]
[ext_resource type="Resource" uid="uid://d05vq2ffcxb73" path="res://data/fita_webapps_novaweb.tres" id="18_f3cn1"]
[ext_resource type="Resource" uid="uid://cmaomu1bb5gjn" path="res://data/fita_webapps_react.tres" id="19_v7y1k"]
[ext_resource type="Resource" uid="uid://dibrk3kj62u7a" path="res://data/fita_webapps_representa.tres" id="20_qm77n"]
[ext_resource type="Resource" uid="uid://dlnhrqrtqi2q2" path="res://data/fita_webapps_solidar.tres" id="21_q47xe"]
[ext_resource type="Resource" uid="uid://cn566rrv4mb0x" path="res://data/fita_webapps_trucades.tres" id="22_piu01"]
[ext_resource type="Resource" uid="uid://cyy677mjasv88" path="res://data/fita_webapps_webforms.tres" id="23_5vqnd"]
[ext_resource type="Resource" uid="uid://bklnv0w40tv51" path="res://data/fita_technocuca_authentik.tres" id="24_q5t8f"]
[ext_resource type="Resource" uid="uid://dkwmpdkswnx35" path="res://data/fita_technocuca_novetats.tres" id="25_0uu8t"]
[ext_resource type="Resource" uid="uid://tkdqumv3j4b1" path="res://data/fita_technocuca_openproject.tres" id="26_7xqtd"]
[ext_resource type="Resource" uid="uid://cj6mdml87ht7" path="res://data/fita_technocuca_radar.tres" id="27_or5xn"]
[ext_resource type="Resource" uid="uid://c8ogbq278lh2i" path="res://data/fita_technocuca_solidar.tres" id="28_ycqny"]
[ext_resource type="Resource" uid="uid://mi2j2npq21o5" path="res://data/fita_po_deute_tecnic.tres" id="29_trbhb"]
[ext_resource type="Resource" uid="uid://c8ncm72mdjw07" path="res://data/fita_po_mindset.tres" id="30_xuidk"]
[ext_resource type="Resource" uid="uid://d0kmoryfoho3q" path="res://data/fita_po_odoo.tres" id="31_hqg2t"]
[ext_resource type="Resource" uid="uid://b3trjlwv1upec" path="res://data/fita_po_openproject.tres" id="32_2712s"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ck71a"]
bg_color = Color(0.301961, 0.301961, 0.301961, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w1o2y"]
bg_color = Color(0, 0, 0, 1)

[node name="FitaBrowser" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xo0bf")
collectible_datas = Array[Resource("res://scripts/collectible_data.gd")]([ExtResource("29_trbhb"), ExtResource("30_xuidk"), ExtResource("31_hqg2t"), ExtResource("32_2712s"), ExtResource("2_ljtju"), ExtResource("3_3w7gs"), ExtResource("4_u64op"), ExtResource("5_mer0w"), ExtResource("6_uocgh"), ExtResource("2_o2fxk"), ExtResource("8_nyx60"), ExtResource("9_jrfb0"), ExtResource("10_j25no"), ExtResource("11_n4nsb"), ExtResource("12_8x6ax"), ExtResource("13_i7un3"), ExtResource("14_5lx4o"), ExtResource("24_q5t8f"), ExtResource("25_0uu8t"), ExtResource("26_7xqtd"), ExtResource("27_or5xn"), ExtResource("28_ycqny"), ExtResource("15_4tew2"), ExtResource("16_cry2x"), ExtResource("17_rjdhl"), ExtResource("18_f3cn1"), ExtResource("19_v7y1k"), ExtResource("20_qm77n"), ExtResource("21_q47xe"), ExtResource("22_piu01"), ExtResource("23_5vqnd")])

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ck71a")

[node name="FlowContainer" type="FlowContainer" parent="MarginContainer/PanelContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/h_separation = 20
alignment = 1

[node name="ToLevelsButton" type="Button" parent="MarginContainer"]
custom_minimum_size = Vector2(70, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme = ExtResource("4_412c2")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
theme_override_font_sizes/font_size = 25
text = "Anar a Nivells"

[node name="FitaCarrousel" type="CanvasLayer" parent="."]
layer = 2
visible = false

[node name="PanelContainer" type="PanelContainer" parent="FitaCarrousel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_w1o2y")

[node name="MarginContainer" type="MarginContainer" parent="FitaCarrousel/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="FitaCarrousel/PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="FitaCarrousel/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="LeftButton" type="Button" parent="FitaCarrousel/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
focus_neighbor_right = NodePath("../RightButton")
focus_neighbor_bottom = NodePath("../../HBoxContainer2/ToLevelsButton")
theme_override_styles/normal = ExtResource("1_smf4e")
theme_override_styles/hover = ExtResource("2_alp6a")
text = "<"

[node name="CollectibleCards" type="HBoxContainer" parent="FitaCarrousel/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
script = ExtResource("3_cemh0")

[node name="RightButton" type="Button" parent="FitaCarrousel/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
focus_neighbor_left = NodePath("../LeftButton")
focus_neighbor_bottom = NodePath("../../HBoxContainer2/ToLevelsButton")
theme_override_styles/normal = ExtResource("1_smf4e")
theme_override_styles/hover = ExtResource("2_alp6a")
text = ">"

[node name="HBoxContainer2" type="HBoxContainer" parent="FitaCarrousel/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="ToLevelsButton" type="Button" parent="FitaCarrousel/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(70, 40)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("4_412c2")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
theme_override_font_sizes/font_size = 25
text = "Anar a Nivells"

[node name="BackButton" type="Button" parent="FitaCarrousel/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(70, 40)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("4_412c2")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
theme_override_font_sizes/font_size = 25
text = "Tornar a Fites"

[connection signal="pressed" from="MarginContainer/ToLevelsButton" to="." method="_on_button_pressed"]
[connection signal="pressed" from="FitaCarrousel/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/LeftButton" to="FitaCarrousel/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/CollectibleCards" method="_on_left_pressed"]
[connection signal="pressed" from="FitaCarrousel/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/RightButton" to="FitaCarrousel/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/CollectibleCards" method="_on_right_pressed"]
[connection signal="pressed" from="FitaCarrousel/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2/ToLevelsButton" to="." method="_on_button_pressed"]
[connection signal="pressed" from="FitaCarrousel/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2/BackButton" to="." method="_on_back_button_pressed"]
